--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'io.mockk:mockk:1.9.3'
     testImplementation 'android.arch.core:core-testing:1.1.1'
-
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.0-alpha04"
 
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
